--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.polyfill.io/v2/polyfill.js?features=default,es6,Object.assign,fetch,Promise"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-apexcharts"></script>
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     
         <title>an XRP Validator</title>
   </head>
