--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146968865-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-146968865-1');
+</script>
     <meta charset="utf-8">
     
     <meta name="monetization" content="$coil.xrptipbot.com/L1qjwjIUQOq_hLvzXrhmlA"/>
@@ -13,7 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-apexcharts"></script>
     <script src="https://code.highcharts.com/stock/highstock.js"></script>
-
+    <link rel="shortcut icon" type="image/png" href="../static/favicon.png"/>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     
         <title>an XRP Validator</title>
